[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pubstripe"
version = "0.1.0a1"
description = "Process payments via Stripe’s API using only a publishable key."
authors = [
    { name = "Dwight Langston" }
]
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.14.0,<1.0.0",
    "tenacity>=9.1.4,<10.0.0",
    "orjson>=3.11.7,<4.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "pydantic-settings>=2.13.1,<3.0.0"
]


[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.packages.find]
where = ["src"]
include = ["pubstripe*"]